Make the user interface functional, at least for the demo.

--- a/ui/src/main/resources/VAADIN/themes/kt/styles.scss
+++ b/ui/src/main/resources/VAADIN/themes/kt/styles.scss
@@ -13,11 +13,10 @@ $v-font-size:14px;
     font-family: 'Vaadin-Icons';
 }
 
-@import "../valo/valo";
-@import "login";
-@import "menu";
+@import "../../themes/threesixty/_threesixty.scss";
+@import "steps";
 
-.sidebar {
-  @include valo;
-  @include dashboard-login-view;
+.kt {
+  @include threesixty;
+  @include steps;
 }
