Make the user interface functional, at least for the demo.

--- a/ui/src/main/resources/VAADIN/themes/kt/steps.scss
+++ b/ui/src/main/resources/VAADIN/themes/kt/steps.scss
@@ -1,5 +1,13 @@
 @mixin steps {
 
+    .v-filterselect {
+        position: relative;
+        width: 250px;
+        height: 26px;
+        border-radius: 0px;
+        white-space: nowrap;
+    }
+
     /**********************************************************
      * Steps
      *********************************************************/
