--- a/ui/src/main/resources/VAADIN/themes/kt/styles.scss
+++ b/ui/src/main/resources/VAADIN/themes/kt/styles.scss
@@ -15,8 +15,10 @@ $v-font-size:14px;
 
 @import "../../themes/threesixty/_threesixty.scss";
 @import "steps";
+@import "diff";
 
 .kt {
   @include threesixty;
   @include steps;
+  @include diff;
 }
